[gd_scene load_steps=24 format=3 uid="uid://bd5e2fiftorgo"]

[ext_resource type="Script" uid="uid://daeebx5wiamen" path="res://addons/FancyControls/GUI/scene/gui_root_script.gd" id="2_g6mr6"]
[ext_resource type="Texture2D" uid="uid://bhvhlwa1y2ec" path="res://addons/FancyControls/GUI/scene/2d.res" id="3_2xky7"]
[ext_resource type="Texture2D" uid="uid://crddlvxtjq48j" path="res://addons/FancyControls/GUI/scene/ClassList.svg" id="4_cm06k"]
[ext_resource type="Texture2D" uid="uid://b5vkq3256l43k" path="res://addons/FancyControls/GUI/scene/script.res" id="4_dh5u7"]
[ext_resource type="Script" uid="uid://cng7ur0r6o73l" path="res://addons/FancyControls/GUI/block/BlockList.gd" id="5_n5rgj"]
[ext_resource type="Resource" uid="uid://d1u2lmga6v4ss" path="res://addons/FancyControls/GUI/code_block_list.tres" id="6_0podo"]
[ext_resource type="Script" uid="uid://tmyfvw68lblc" path="res://addons/FancyControls/GUI/block/BlockUI.gd" id="6_bgwiu"]
[ext_resource type="Script" uid="uid://bj73su5l5ruh0" path="res://addons/FancyControls/GUI/scene/CodeBox.gd" id="8_ii3ab"]
[ext_resource type="Script" uid="uid://w1rwmh4hb4qn" path="res://addons/FancyControls/Controls/AnimatedRoundContainer/AnimatedRoundContainer.gd" id="9_3hbk3"]
[ext_resource type="CodeHighlighter" uid="uid://g0qjjgb0nwf8" path="res://addons/FancyControls/GUI/codehighlight.tres" id="9_8spe6"]
[ext_resource type="Script" uid="uid://gjs8jrwt2vyj" path="res://addons/FancyControls/Controls/AnimatedItem/FancyAnimatedItem/FancyAnimatedItem.gd" id="10_e6eqe"]
[ext_resource type="Script" uid="uid://da2qpubt2cmkw" path="res://addons/FancyControls/GUI/scene/GroupsBox.gd" id="10_p5gwx"]
[ext_resource type="Script" uid="uid://4m8p4m5lxv4t" path="res://addons/FancyControls/GUI/scene/right_click_menu.gd" id="13_3wsnl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fbxee"]
content_margin_left = 12.0
content_margin_right = 12.0

[sub_resource type="InputEventKey" id="InputEventKey_7g5hc"]
device = -1
pressed = true
keycode = 87
unicode = 119

[sub_resource type="Shortcut" id="Shortcut_7wesj"]
events = [SubResource("InputEventKey_7g5hc")]

[sub_resource type="InputEventKey" id="InputEventKey_n0sbx"]
device = -1
pressed = true
keycode = 83
unicode = 115

[sub_resource type="Shortcut" id="Shortcut_2feun"]
events = [SubResource("InputEventKey_n0sbx")]

[sub_resource type="InputEventKey" id="InputEventKey_no1se"]
device = -1
keycode = 68
unicode = 100
echo = true

[sub_resource type="InputEventKey" id="InputEventKey_bv2mo"]
device = -1
shift_pressed = true
keycode = 68
physical_keycode = 68
key_label = 68
unicode = 68
echo = true

[sub_resource type="Shortcut" id="Shortcut_fw5qn"]
events = [SubResource("InputEventKey_no1se"), SubResource("InputEventKey_bv2mo")]

[sub_resource type="InputEventKey" id="InputEventKey_mcxrh"]
device = -1
pressed = true
keycode = 82
unicode = 114

[sub_resource type="Shortcut" id="Shortcut_ly3hp"]
events = [SubResource("InputEventKey_mcxrh")]

[node name="Control" type="Control"]
visible = false
custom_minimum_size = Vector2(768, 512)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
script = ExtResource("2_g6mr6")

[node name="Box" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 2

[node name="TopBar" type="PanelContainer" parent="Box"]
layout_mode = 2
size_flags_stretch_ratio = 0.06
mouse_filter = 1

[node name="TabBar" type="TabBar" parent="Box/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "(F1-F3)
Change Tab"
mouse_filter = 1
theme_override_colors/font_selected_color = Color(0.4, 0.701961, 1, 1)
theme_override_styles/button_highlight = SubResource("StyleBoxEmpty_fbxee")
theme_override_styles/button_pressed = SubResource("StyleBoxEmpty_fbxee")
theme_override_styles/tab_unselected = SubResource("StyleBoxEmpty_fbxee")
theme_override_styles/tab_hovered = SubResource("StyleBoxEmpty_fbxee")
theme_override_styles/tab_selected = SubResource("StyleBoxEmpty_fbxee")
theme_override_styles/tab_disabled = SubResource("StyleBoxEmpty_fbxee")
theme_override_styles/tab_focus = SubResource("StyleBoxEmpty_fbxee")
current_tab = 0
tab_alignment = 1
clip_tabs = false
scrolling_enabled = false
tab_count = 3
tab_0/title = "GUI"
tab_0/icon = ExtResource("3_2xky7")
tab_1/title = "Code View"
tab_1/icon = ExtResource("4_dh5u7")
tab_2/title = "Animation Groups"
tab_2/icon = ExtResource("4_cm06k")

[node name="Label" type="LineEdit" parent="Box/TopBar"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
size_flags_horizontal = 0
placeholder_text = "Name Of Current Chain"
max_length = 24
expand_to_text_length = true
middle_mouse_paste_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
flat = true
caret_blink = true

[node name="HBoxContainer" type="HBoxContainer" parent="Box/TopBar"]
layout_mode = 2
size_flags_horizontal = 8
alignment = 2

[node name="Button" type="Button" parent="Box/TopBar/HBoxContainer"]
layout_mode = 2
text = "Save Chain"

[node name="Button2" type="Button" parent="Box/TopBar/HBoxContainer"]
layout_mode = 2
text = "Load Chain"

[node name="MainBox" type="HBoxContainer" parent="Box"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Box/MainBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[node name="HBoxContainer" type="HBoxContainer" parent="Box/MainBox/VBoxContainer"]
layout_mode = 2

[node name="BlockList" type="Tree" parent="Box/MainBox/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25
theme_override_constants/draw_guides = 0
theme_override_constants/scroll_border = 0
allow_reselect = true
hide_root = true
scroll_horizontal_enabled = false
script = ExtResource("5_n5rgj")
BlockList = ExtResource("6_0podo")

[node name="BlockUI" type="GraphEdit" parent="Box/MainBox"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
right_disconnects = true
connection_lines_thickness = 1.0
minimap_enabled = false
show_menu = false
show_zoom_buttons = false
show_grid_buttons = false
show_minimap_button = false
show_arrange_button = false
script = ExtResource("6_bgwiu")
metadata/func_name = "unset_name"

[node name="StartNode" type="GraphNode" parent="Box/MainBox/BlockUI"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 203.0
mouse_filter = 1
draggable = false
title = "Item"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 0.462745, 0.392157, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = true
slot/1/right_type = 5
slot/1/right_color = Color(0.45098, 1, 0.45098, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = true
slot/2/right_type = 5
slot/2/right_color = Color(0.45098, 1, 0.45098, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = true
slot/3/right_type = 3
slot/3/right_color = Color(1, 0.945098, 0.411765, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color(1, 1, 1, 1)
slot/4/left_icon = null
slot/4/right_enabled = true
slot/4/right_type = 3
slot/4/right_color = Color(1, 0.945098, 0.411765, 1)
slot/4/right_icon = null
slot/4/draw_stylebox = true
slot/5/left_enabled = false
slot/5/left_type = 0
slot/5/left_color = Color(1, 1, 1, 1)
slot/5/left_icon = null
slot/5/right_enabled = true
slot/5/right_type = 3
slot/5/right_color = Color(1, 0.945098, 0.411765, 1)
slot/5/right_icon = null
slot/5/draw_stylebox = true
metadata/runnable = true
metadata/type = "function"
metadata/action = "INITIALIZE"
metadata/value_0 = "run_item_if_seen_it_is_an_error"
metadata/value_1 = "item_node.global_position"
metadata/value_2 = "item_node.scale"
metadata/value_3 = "item_node.rotation"
metadata/value_count = 4
metadata/value_4 = "item_index"
metadata/value_5 = "total_items"
metadata/type_1 = 5
metadata/type_2 = 5
metadata/type_3 = 3
metadata/type_4 = 2
metadata/type_5 = 2
metadata/type_0 = 0
metadata/ignore_in_compile = true

[node name="Label" type="Label" parent="Box/MainBox/BlockUI/StartNode"]
layout_mode = 2
mouse_filter = 1
text = "RUN"

[node name="Label2" type="Label" parent="Box/MainBox/BlockUI/StartNode"]
layout_mode = 2
mouse_filter = 1
text = "Position"

[node name="Label4" type="Label" parent="Box/MainBox/BlockUI/StartNode"]
layout_mode = 2
mouse_filter = 1
text = "Scale"

[node name="Label3" type="Label" parent="Box/MainBox/BlockUI/StartNode"]
layout_mode = 2
mouse_filter = 1
text = "Rotation"

[node name="Label5" type="Label" parent="Box/MainBox/BlockUI/StartNode"]
layout_mode = 2
mouse_filter = 1
text = "index"

[node name="Label6" type="Label" parent="Box/MainBox/BlockUI/StartNode"]
layout_mode = 2
mouse_filter = 1
text = "total items"

[node name="StartContainerNode" type="GraphNode" parent="Box/MainBox/BlockUI"]
layout_mode = 0
offset_top = 224.0
offset_right = 128.0
offset_bottom = 377.0
mouse_filter = 1
position_offset = Vector2(0, 224)
draggable = false
title = "Container"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 5
slot/0/right_color = Color(0.45098, 1, 0.45098, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = true
slot/1/right_type = 5
slot/1/right_color = Color(0.45098, 1, 0.45098, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = true
slot/2/right_type = 5
slot/2/right_color = Color(0.45098, 1, 0.45098, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = true
slot/3/right_type = 3
slot/3/right_color = Color(1, 0.945098, 0.411765, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
metadata/runnable = false
metadata/type = "function"
metadata/action = "INITIALIZE_CONTAINER"
metadata/value_0 = "container_info.size"
metadata/value_1 = "container_info.global_position"
metadata/value_2 = "container_info.item_origins[item_index]"
metadata/value_3 = "container_info.rotation"
metadata/value_count = 4
metadata/type_0 = 5
metadata/type_1 = 5
metadata/type_2 = 5
metadata/type_3 = 3
metadata/ignore_in_compile = true

[node name="Label3" type="Label" parent="Box/MainBox/BlockUI/StartContainerNode"]
layout_mode = 2
mouse_filter = 1
text = "Size"

[node name="Label4" type="Label" parent="Box/MainBox/BlockUI/StartContainerNode"]
layout_mode = 2
mouse_filter = 1
text = "Position"

[node name="Label" type="Label" parent="Box/MainBox/BlockUI/StartContainerNode"]
layout_mode = 2
mouse_filter = 1
text = "Item Origin"

[node name="Label2" type="Label" parent="Box/MainBox/BlockUI/StartContainerNode"]
layout_mode = 2
mouse_filter = 1
text = "Rotation"

[node name="CodeBox" type="HBoxContainer" parent="Box"]
visible = false
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("8_ii3ab")

[node name="CodeEdit" type="CodeEdit" parent="Box/CodeBox"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
text = "var testing"
editable = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
minimap_draw = true
syntax_highlighter = ExtResource("9_8spe6")
draw_tabs = true
gutters_draw_line_numbers = true

[node name="VBoxContainer" type="VBoxContainer" parent="Box/CodeBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="HBoxContainer" type="HBoxContainer" parent="Box/CodeBox/VBoxContainer"]
layout_mode = 2

[node name="PlayAnim" type="Button" parent="Box/CodeBox/VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 1
shortcut = SubResource("Shortcut_7wesj")
text = "Play"

[node name="PauseAnim" type="Button" parent="Box/CodeBox/VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 1
shortcut = SubResource("Shortcut_2feun")
text = "Pause"

[node name="StepAnim" type="Button" parent="Box/CodeBox/VBoxContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "D/SHIFT+D"
mouse_filter = 1
shortcut = SubResource("Shortcut_fw5qn")
text = "Step"

[node name="OptionButton" type="OptionButton" parent="Box/CodeBox/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
selected = 0
item_count = 3
popup/item_0/text = "Round"
popup/item_0/id = 0
popup/item_1/text = "Horizontal"
popup/item_1/id = 1
popup/item_2/text = "Vertical"
popup/item_2/id = 2

[node name="ResetAnim" type="Button" parent="Box/CodeBox/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 1
shortcut = SubResource("Shortcut_ly3hp")
text = "Reset"

[node name="Container" type="PanelContainer" parent="Box/CodeBox/VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1

[node name="AnimatedRoundContainer" type="Control" parent="Box/CodeBox/VBoxContainer/Container"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("9_3hbk3")
border_padding = Vector2(32, 32)
_hovered = &""
_unhovered = &""
_focused = &""
_unfocused = &""
_input = &""

[node name="FancyAnimatedItem" type="Control" parent="Box/CodeBox/VBoxContainer/Container/AnimatedRoundContainer"]
custom_minimum_size = Vector2(40, 40)
anchors_preset = 0
offset_left = 108.0
offset_top = 12.0
offset_right = 148.0
offset_bottom = 52.0
script = ExtResource("10_e6eqe")
position_count = 0
rotation_count = 0
scale_count = 0

[node name="Panel" type="Panel" parent="Box/CodeBox/VBoxContainer/Container/AnimatedRoundContainer/FancyAnimatedItem"]
layout_mode = 0
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0

[node name="FancyAnimatedItem2" type="Control" parent="Box/CodeBox/VBoxContainer/Container/AnimatedRoundContainer"]
custom_minimum_size = Vector2(40, 40)
anchors_preset = 0
offset_left = 40.1178
offset_top = 40.1178
offset_right = 80.1178
offset_bottom = 80.1178
script = ExtResource("10_e6eqe")
position_count = 0
rotation_count = 0
scale_count = 0

[node name="Panel" type="Panel" parent="Box/CodeBox/VBoxContainer/Container/AnimatedRoundContainer/FancyAnimatedItem2"]
layout_mode = 0
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0

[node name="FancyAnimatedItem3" type="Control" parent="Box/CodeBox/VBoxContainer/Container/AnimatedRoundContainer"]
custom_minimum_size = Vector2(40, 40)
anchors_preset = 0
offset_left = 12.0
offset_top = 108.0
offset_right = 52.0
offset_bottom = 148.0
script = ExtResource("10_e6eqe")
position_count = 0
rotation_count = 0
scale_count = 0

[node name="Panel" type="Panel" parent="Box/CodeBox/VBoxContainer/Container/AnimatedRoundContainer/FancyAnimatedItem3"]
layout_mode = 0
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0

[node name="FancyAnimatedItem4" type="Control" parent="Box/CodeBox/VBoxContainer/Container/AnimatedRoundContainer"]
custom_minimum_size = Vector2(40, 40)
anchors_preset = 0
offset_left = 40.1178
offset_top = 175.882
offset_right = 80.1178
offset_bottom = 215.882
script = ExtResource("10_e6eqe")
position_count = 0
rotation_count = 0
scale_count = 0

[node name="Panel" type="Panel" parent="Box/CodeBox/VBoxContainer/Container/AnimatedRoundContainer/FancyAnimatedItem4"]
layout_mode = 0
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0

[node name="FancyAnimatedItem5" type="Control" parent="Box/CodeBox/VBoxContainer/Container/AnimatedRoundContainer"]
custom_minimum_size = Vector2(40, 40)
anchors_preset = 0
offset_left = 108.0
offset_top = 204.0
offset_right = 148.0
offset_bottom = 244.0
script = ExtResource("10_e6eqe")
position_count = 0
rotation_count = 0
scale_count = 0

[node name="Panel" type="Panel" parent="Box/CodeBox/VBoxContainer/Container/AnimatedRoundContainer/FancyAnimatedItem5"]
layout_mode = 0
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0

[node name="FancyAnimatedItem6" type="Control" parent="Box/CodeBox/VBoxContainer/Container/AnimatedRoundContainer"]
custom_minimum_size = Vector2(40, 40)
anchors_preset = 0
offset_left = 175.882
offset_top = 175.882
offset_right = 215.882
offset_bottom = 215.882
script = ExtResource("10_e6eqe")
position_count = 0
rotation_count = 0
scale_count = 0

[node name="Panel" type="Panel" parent="Box/CodeBox/VBoxContainer/Container/AnimatedRoundContainer/FancyAnimatedItem6"]
layout_mode = 0
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0

[node name="FancyAnimatedItem7" type="Control" parent="Box/CodeBox/VBoxContainer/Container/AnimatedRoundContainer"]
custom_minimum_size = Vector2(40, 40)
anchors_preset = 0
offset_left = 204.0
offset_top = 108.0
offset_right = 244.0
offset_bottom = 148.0
script = ExtResource("10_e6eqe")
position_count = 0
rotation_count = 0
scale_count = 0

[node name="Panel" type="Panel" parent="Box/CodeBox/VBoxContainer/Container/AnimatedRoundContainer/FancyAnimatedItem7"]
layout_mode = 0
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0

[node name="FancyAnimatedItem8" type="Control" parent="Box/CodeBox/VBoxContainer/Container/AnimatedRoundContainer"]
custom_minimum_size = Vector2(40, 40)
anchors_preset = 0
offset_left = 175.882
offset_top = 40.1178
offset_right = 215.882
offset_bottom = 80.1178
script = ExtResource("10_e6eqe")
position_count = 0
rotation_count = 0
scale_count = 0

[node name="Panel" type="Panel" parent="Box/CodeBox/VBoxContainer/Container/AnimatedRoundContainer/FancyAnimatedItem8"]
layout_mode = 0
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0

[node name="GroupsBox" type="VBoxContainer" parent="Box"]
visible = false
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("10_p5gwx")

[node name="Tree" type="Tree" parent="Box/GroupsBox"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
columns = 4
column_titles_visible = true
allow_reselect = true
allow_search = false
hide_root = true
scroll_horizontal_enabled = false

[node name="HBoxContainer" type="HBoxContainer" parent="Box/GroupsBox"]
layout_mode = 2
alignment = 2

[node name="Button" type="Button" parent="Box/GroupsBox/HBoxContainer"]
layout_mode = 2
text = "Create Group"

[node name="Button2" type="Button" parent="Box/GroupsBox/HBoxContainer"]
layout_mode = 2
text = "Remove Group"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
initial_position = 4
dialog_text = "This name is already being used by an animation.
Are you sure you want to overwrite it?"

[node name="ConfirmationDialog2" type="ConfirmationDialog" parent="."]
initial_position = 4
dialog_text = "Are you sure you want to remove this Animation Function?"

[node name="ChainLoadDialog" type="FileDialog" parent="."]
handle_input_locally = false
title = "Open a File"
initial_position = 4
size = Vector2i(384, 256)
ok_button_text = "Open"
file_mode = 0
root_subfolder = "res://FACS/Editor/"
filters = PackedStringArray("*.FACSVis", "*.gd")
show_hidden_files = true

[node name="ChainChooseDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 4
size = Vector2i(384, 256)
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.FACSVis", "*.gd")
show_hidden_files = true

[node name="ChainChooseForGroup" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 4
size = Vector2i(384, 256)
ok_button_text = "Open"
file_mode = 0
root_subfolder = "res://"
filters = PackedStringArray("*.FACSVis", "*.gd")
show_hidden_files = true

[node name="RightClickMenu" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 224.0
offset_bottom = 288.0
script = ExtResource("13_3wsnl")

[node name="VBoxContainer" type="VBoxContainer" parent="RightClickMenu"]
layout_mode = 2

[node name="NewNodeSearch" type="LineEdit" parent="RightClickMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
placeholder_text = "Node Name"

[node name="NewNodeList" type="ItemList" parent="RightClickMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[connection signal="tab_selected" from="Box/TopBar/TabBar" to="." method="_on_tab_bar_tab_selected"]
[connection signal="text_changed" from="Box/TopBar/Label" to="Box/MainBox/BlockUI" method="_on_func_name_text_changed"]
[connection signal="pressed" from="Box/TopBar/HBoxContainer/Button" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="Box/TopBar/HBoxContainer/Button2" to="." method="_on_load_button_pressed"]
[connection signal="item_activated" from="Box/MainBox/VBoxContainer/BlockList" to="Box/MainBox/VBoxContainer/BlockList" method="_on_item_activated"]
[connection signal="item_selected" from="Box/MainBox/VBoxContainer/BlockList" to="Box/MainBox/VBoxContainer/BlockList" method="_on_item_selected"]
[connection signal="begin_node_move" from="Box/MainBox/BlockUI" to="Box/MainBox/BlockUI" method="_on_begin_node_move"]
[connection signal="connection_request" from="Box/MainBox/BlockUI" to="Box/MainBox/BlockUI" method="_on_connection_request"]
[connection signal="delete_nodes_request" from="Box/MainBox/BlockUI" to="Box/MainBox/BlockUI" method="_on_delete_nodes_request"]
[connection signal="disconnection_request" from="Box/MainBox/BlockUI" to="Box/MainBox/BlockUI" method="_on_disconnection_request"]
[connection signal="duplicate_nodes_request" from="Box/MainBox/BlockUI" to="Box/MainBox/BlockUI" method="_on_duplicate_nodes_request"]
[connection signal="end_node_move" from="Box/MainBox/BlockUI" to="Box/MainBox/BlockUI" method="_on_end_node_move"]
[connection signal="node_deselected" from="Box/MainBox/BlockUI" to="Box/MainBox/BlockUI" method="_on_node_deselected"]
[connection signal="node_selected" from="Box/MainBox/BlockUI" to="Box/MainBox/BlockUI" method="_on_node_selected"]
[connection signal="pressed" from="Box/CodeBox/VBoxContainer/HBoxContainer/PlayAnim" to="Box/CodeBox" method="_on_play_anim_pressed"]
[connection signal="pressed" from="Box/CodeBox/VBoxContainer/HBoxContainer/PauseAnim" to="Box/CodeBox" method="_on_pause_anim_pressed"]
[connection signal="pressed" from="Box/CodeBox/VBoxContainer/HBoxContainer/StepAnim" to="Box/CodeBox" method="_on_step_anim_pressed"]
[connection signal="item_selected" from="Box/CodeBox/VBoxContainer/HBoxContainer/OptionButton" to="Box/CodeBox" method="_on_option_button_item_selected"]
[connection signal="pressed" from="Box/CodeBox/VBoxContainer/HBoxContainer/ResetAnim" to="Box/CodeBox" method="_on_reset_anim_pressed"]
[connection signal="button_clicked" from="Box/GroupsBox/Tree" to="Box/GroupsBox" method="_on_tree_button_clicked"]
[connection signal="item_activated" from="Box/GroupsBox/Tree" to="Box/GroupsBox" method="_on_tree_item_activated"]
[connection signal="item_collapsed" from="Box/GroupsBox/Tree" to="Box/GroupsBox" method="_on_tree_item_collapsed"]
[connection signal="item_edited" from="Box/GroupsBox/Tree" to="Box/GroupsBox" method="_on_tree_item_edited"]
[connection signal="item_selected" from="Box/GroupsBox/Tree" to="Box/GroupsBox" method="_on_tree_item_selected"]
[connection signal="pressed" from="Box/GroupsBox/HBoxContainer/Button" to="Box/GroupsBox" method="_on_create_group_button_pressed"]
[connection signal="pressed" from="Box/GroupsBox/HBoxContainer/Button2" to="Box/GroupsBox" method="_on_remove_group_button_pressed"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_save_confirmed"]
[connection signal="confirmed" from="ConfirmationDialog2" to="Box/GroupsBox" method="_on_confirmation_remove_group_func_confirmed"]
[connection signal="file_selected" from="ChainLoadDialog" to="." method="_on_chain_load_dialog_file_selected"]
[connection signal="file_selected" from="ChainChooseDialog" to="Box/GroupsBox" method="_on_chain_choose_dialog_file_selected"]
[connection signal="file_selected" from="ChainChooseForGroup" to="Box/GroupsBox" method="_on_chain_choose_for_group_file_selected"]
